Almost finished with website
Finished header, services, about, faq, contact, and footer.

Css styling almost finished.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <!-- meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Custom metal febarication in Portland, Oregon">
-    <meta name="keywords" content="metal, iron, steel, aluminum, ironwork, ironworker, pacific northwest, pnw, nw, custom, ornamental, portland, oregon">
+    <meta name="description" content="Custom metal fabrication in Portland, Oregon">
+    <meta name="keywords" content="metal, iron, steel, aluminum, ironwork, ironworker, pacific northwest, pnw, nw, northwest, custom, ornamental, residential, commercial, traditional, modern, craftsmanship, quality, portland, oregon">
     <meta name="author" content="Roman Stipic">
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Custom fonts for this template -->
+    <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -19,8 +27,8 @@
   
   <body id="page-top">
 
-    <!-- navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Metro Custom Ironworks</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,13 +38,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portoflio">Portfolio</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
@@ -49,18 +54,208 @@
       </div>
     </nav>
 
-
-    <div class="container">
-      <div class="row">
-        <header>
-        </header>
+    <!-- HEADER -->
+    <header class="masthead">
+      <div class="container">
+        <div class="intro-text">
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Free Estimates!</a>
+        </div>
       </div>
-    </div>
+    </header>
+
+    <!-- SERVICES -->
+    <section class="page-section" id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Services</h2>
+            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Fencing</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Gates</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Railings</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Balconies</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Pool Enclosures</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Security Encolsures</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-square fa-stack-2x text-primary"></i>
+              <i class="far fa-file-alt fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Miscellaneous</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="bg-light page-section" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">About Us</h2>
+            <h3 class="section-subheading text-muted">The history behind our operation.</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p style="text-align:justify">In 2002, Malden Stipic decided to take his talent working with wrought iron specialties a step further, and formed Metro Custom Iron Works (MCIW). In addition to his already 25 years’ experience, MCIW has continued the tradition in bringing specialized iron fabrication to residential and commercial customers throughout the Northwest.
+            <br>
+            <br>
+            Ornamental ironwork has been around for centuries and is still very popular today, primarily because of its traditional and elegant look, but also by its superior durability and strength. MCIW is a versatile and full service steel shop handling jobs both large and small, and utilizing top quality materials with high-end craftsmanship. Whether it be simple or grand, MCIW can design, manufacture, and install your custom iron vision. Please inquire today.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="page-section" id="faq">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Frquently Asked Questions</h2>
+            <h3 class="section-subheading text-muted">Answers to some common questions.</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p style="text-align:justify">
+              <strong>1. Do you install your own work?</strong>
+              <br>
+              <strong>A:</strong> Yes, we do install our own work, and we won’t leave your job site until the work is installed exactly the way you want it. We will also do the fabrication only for customers that would like to do the installation themselves.
+              <br>
+              <br>
+              <strong>2. What kinds of finishes are available?</strong>
+              <br>
+              <strong>A:</strong> We can provide any finish that can be applied to steel. Typically, customers will choose powder coating or galvanizing because of their high durability.
+              <br>
+              <br>
+              <strong>3. What are the advantages of steel products (railing, fence, gates, etc.) as opposed to wood?</strong>
+                <br>
+              <strong>A:</strong> While wood may be the cheaper option at first glance, steel is much more durable and will save you money in the end. With the rainy weather that we often have in the Pacific Northwest, wood will weaken over time and will require frequent coating to protect it. Steel, on the other hand, will stand the test of time and requires much less maintenance. Not to mention the elegance and value that a steel railing, fence, or gate will add to your property!
+              <br>
+              <br>
+              <strong>4. What forms of payment do you accept?</strong>
+              <br>
+              <strong>A:</strong> We accept cash and checks only at this time.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="page-section" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Contact Us</h2>
+            <h3 class="section-subheading text-muted">Below you will find our phone #, email, and location.</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 contact-text text-center">
+            <p>
+            Phone:
+            <br>
+            <a href="tel:503-317-1965">503-317-1965</a>
+            <br>
+            <br>
+            Fax:
+            <br>
+            503.256.4794
+            <br>
+            <br>
+            E-mail:
+            <br>
+            <a href="mailto:malden@metrocustomiron.com" target="_top">malden@metrocustomiron.com</a>
+            <br>
+            <br>
+            Location:
+            <br>
+            <a href="http://maps.google.com/maps?q=8603+South+East+Mcloughlin+Blvd,+Milwaukie,+OR+97222">8603 South East Mcloughlin Blvd, Milwaukie, OR 97222</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12 text-center">
+            <span class="copyright">© Metro Custom Ironworks 2019</span>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     
     <!-- Optional javascript / jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/agency.js"></script>
   </body>
 </html>
