Getting close to finishing website
-added testimonials section
-tweaked CSS

--- a/index.html
+++ b/index.html
@@ -133,6 +133,38 @@
       </div>
     </section>
 
+    <!--TESTIMONIALS-->
+    <section class="page-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Testimonials</h2>
+            <h3 class="section-subheading text-muted">What our customers are saying.</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <blockquote style="text-align:left" cite="Customer1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</blockquote>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-lg-12">
+            <blockquote style="text-align:left" cite="Customer2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</blockquote>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-lg-12">
+            <blockquote style="text-align:left" cite="Customer3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
     <!-- ABOUT -->
     <section class="bg-light page-section" id="about">
       <div class="container">
@@ -195,7 +227,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Below you will find our phone #, email, and location.</h3>
+            <h3 class="section-subheading text-muted">Below you will find our phone number, e-mail, and shop address.</h3>
           </div>
         </div>
         <div class="row">
@@ -204,11 +236,6 @@
             Phone:
             <br>
             <a href="tel:503-317-1965">503-317-1965</a>
-            <br>
-            <br>
-            Fax:
-            <br>
-            503.256.4794
             <br>
             <br>
             E-mail:
