--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Metro Custom Ironworks</title>
+    <title>Metro Custom Ironworks LLC</title>
   </head>
   
   <body id="page-top">
@@ -30,7 +30,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Metro Custom Ironworks</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Metro Custom Ironworks LLC</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -55,6 +55,7 @@
     </nav>
 
     <!-- HEADER -->
+    <!--
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
@@ -62,6 +63,35 @@
         </div>
       </div>
     </header>
+    -->
+
+    <header id="carouselPictures" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselPictures" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselPictures" data-slide-to="1"></li>
+        <li data-target="#carouselPictures" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/slide1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/slide2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/slide3.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselPictures" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselPictures" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </header>
+
 
     <!-- SERVICES -->
     <section class="page-section" id="services">
